# fastapi

./: .gitignore  main.py  pyproject.toml
notebook/: yfinance.ipynb
project1/: book.py
project2/: books.py  main.py
test/: conftest.py  test.py
todoapp/: database.py  main.py  model.py  todos.db
todoapp/routers/: auth.py  todos.py
