[tool.poetry]
name = "fastapienv"
version = "0.1.0"
description = ""
authors = ["Manoj <manoj.mis@swastiks.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.3"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
passlib = "^1.7.4"
bcrypt = "4.0.1"
python-multipart = "^0.0.16"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlalchemy-stubs = "^0.4"


[tool.poetry.group.dev.dependencies]
sqlalchemy-stubs = "^0.4"
types-python-jose = {extras = ["cryptography"], version = "^3.3.4.20240106"}
python-multipart = "^0.0.16"
types-passlib = "^1.7.7.20240819"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"  # or whatever version you're using
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
check_untyped_defs = true
disallow_any_generics = false  # Set to false for now
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false  # Set to false for now

[[tool.mypy.overrides]]
module = [
    "fastapi.*",
    "sqlalchemy.*",
    "jose.*",
    "passlib.*"
]
ignore_missing_imports = true
