[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["psrinathmanoj <ps.manoj@ymail.com>"]
readme = "README.md"
packages = [{include = "todo"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
yfinance = "^0.2.50"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.32.1"
fastapi = "^0.115.5"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "uvicorn main:app --reload"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
